# Mandelbrot

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
docs/: documentation-it.md  framework_uml.uxf
libs/: CMakeLists.txt
libs/handmademath/: CMakeLists.txt
libs/vx_utils/src/: vx_file.c  vx_functions.h  vx_mem.c  vx_mem.h  vx_types.h  vx_utils.h  vx_vector.h
libs/vx_utils_bak/: CMakeLists.txt
libs/vx_utils_bak/src/: vx_mem.c
res/shaders/: basic.fs  basic.vs  mandelbrot.fs  newmandelbrot.fs
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.c  mb_data_structures.h  mb_global.c  mb_global.h  mb_gui.c  mb_gui.h  mb_hmm_helper.c  mb_hmm_helper.h  mb_input.c  mb_input.h  mb_mode2D.c  mb_mode3D.c  mb_mode3D.h
src/main/src/: main.c  mb_data_structures.h  mb_global.c  mb_global.h  mb_gui.c  mb_gui.h  mb_input.c  mb_input.h  mb_mode2D.c  mb_mode2D.h  mb_mode3D.c  mb_mode3D.h
src/os/: CMakeLists.txt  input_helper.h  os.h  state_manager.c  state_manager.h  user_state_ptr.h  window.h  window_control.h  window_descriptor.h
